# hsc

./: LICENSE  Lexer.hs  Parser.y  Types.hs  hsc.cabal  lex.y  notes.org  readme.org
src/: Lexer.hs  Lexer.x  Main.hs  Parser.y  Test.hs  Types.hs  Util.hs
test/: Test.hs  TestUtil.hs  Util.hs
test/data/: C_ErrFuncParamsInvalidType.src  C_ErrFuncParamsTooFew.src  C_ErrFuncParamsTooMany.src  O_AbsoluteValueTest.src  O_Knapsack.src  O_MultiDimArray.src  O_SimpleRecord.src  O_TypeJumpScope.src  check.py  checkdir.py  gccwrap
