name:                hsc
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/saevarb/hsc#readme
license:             BSD3
license-file:        LICENSE
author:              Sævar Berg
maintainer:          saevarb@sbrg.me
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10


executable hsc
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       MonadRandom
                     , array
                     , base
                     , megaparsec
                     , mtl
                     , random
                     , shelly
                     , text >= 1.2.2.1
                     , hsc

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Types
                     , Lexer
                     , Parser
                     , Util
  build-depends:       MonadRandom
                     , array
                     , base
                     , megaparsec
                     , mtl
                     , random
                     , shelly
                     , text >= 1.2.2.1


test-suite hsc-test
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -main-is Test
  main-is:             Test.hs
  hs-source-dirs:      test
  other-modules:       TestUtil
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , hsc
